[package]
name = "gumby_app"
version = "0.0.1"
authors = ["Konrad Gądek <kgadek@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/blancmanges/gumby"
description = "Mr Gumby, a stupid slackbot."

[dependencies]
slack = "0.19.0"
slack_api = "0.19.0"
clap = "2.31.2"
chrono-tz = "0.4.1"
openssl-probe = "0.1.2"
gumby_ability = { path = "../gumby_ability" }
gumby_tz = { path = "../abilities/gumby_tz" }
gumby_cmd = { path = "../abilities/gumby_cmd" }
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_debug"] }
sloggers = "0.2.6"
itertools = "0.7.8"