[package]
name = "gumby_tz"
version = "0.0.1"
authors = ["Konrad Gądek <kgadek@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/blancmanges/gumby"

[dependencies]
gumby_ability = { path = "../../gumby_ability" }
chrono = "0.4.5"
chrono-tz = "0.4.1"
itertools = "0.7.8"
slog = "2.3.2"